syntax = "proto3";
option go_package = "./messages/client_resourceman";


message ResourceManagerMessage{
    enum ErrorCode {
        NO_ERROR = 0;
        FILE_NOT_FOUND = 1;
        JOB_NOT_VALID = 2;
        SERVER_ERROR = 3;
    }

    message JobResponse{
        ErrorCode error_code = 1;
    }

    enum ProgressUpdateType{
        JOB_STARTED = 0;
        JOB_COMPLETED = 1;
        JOB_FAILED = 2;
        JOB_ONGOING = 3;
    }

    enum TaskType{
        MAP = 0;
        REDUCE = 1;
    }

    message TaskProgress{
        TaskType task_type = 1;
        int32 task_number = 2;
        int32 total_tasks = 3;
    }


    message ProgressUpdate{
        ProgressUpdateType update_type = 1;
        TaskProgress task_progress = 2;
    }

    oneof message{
        JobResponse job_response = 1;
        ProgressUpdate progress_update = 2;
    }

}

message ClientJobRequest{


    message Job{
        string input_file_name = 1;
        string output_file_name = 2;
        int32 reducer_count = 3;
        bytes job_so = 4;
    }

    message Jobs{
        repeated Job jobs = 1;
    }

    oneof client_message{
        Jobs jobs = 1;
    }

}

